# swagger.json
@@ -109,6 +109,85 @@
         }
       }
     },
+    "/v1/stacks": {
+      "get": {
+        "description": "Get all stored stacks in Database",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "An array of stacks",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/Stacks"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/stacks/{id}": {
+      "get": {
+        "description": "Get stack by stackId",
+        "tags": [
+          "stacks"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "the unique stackId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "return stack by id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/StackSchema"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/users": {
       "get": {
         "description": "Get all stored users in Database",
@@ -281,6 +360,28 @@
   },
   "components": {
     "schemas": {
+      "StackSchema": {
+        "required": [
+          "name"
+        ],
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "wikipediaLink": {
+            "type": "string"
+          }
+        }
+      },
+      "Stacks": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/StackSchema"
+        }
+      },
       "UserSchema": {
         "required": [
           "email",
